# WindML

./: .environment.yaml.swp  .gitignore  KPIs  KPIs.md  README.md  environment.yaml  pyproject.toml  requirements.txt  setup.py
Data Turbines - enriched/: data_description.csv  static-information.csv
jupyter-notebooks/: 1_Column_Analysis.ipynb  1_Scalability.ipynb  2_Read_One.ipynb  2_Scalability.ipynb  3_Read_All.ipynb  4_Time_Series_Analysis.ipynb  5_Machine_Learning.ipynb  Cross_columns.ipynb  Machine_Learning.ipynb  Read_one.ipynb  Read_two.ipynb  Scalability.ipynb  Test_Gauss.ipynb  Time_Series_Analysis.ipynb  data_descr.ipynb  linear_LC.json  reduce_data.ipynb
src/WindML/machine_learning/: learning_curve.py
windml/: config.py
windml/core/: functions.py
windml/machine_learning/: learning_curve.py  regression_models.py  time_analysis.py
windml/visualization/: custom_plots.py
