[tool.poetry]
name = "windml"
version = "0.1.0"
description = ""
authors = ["marcodigennaro <m.di.gennaro@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
windrose = "^1.9.0"
dask = "^2024.4.1"
pyarrow = "^15.0.2"
xgboost = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
