[tool.poetry]
name = "windml"
version = "0.1.0"
description = ""
authors = ["Marco Di Gennaro <m.di.gennaro@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
scikit-learn = "^1.4.2"
jupyterlab = "^4.1.6"
matplotlib = "^3.8.4"
windrose = "^1.9.0"
xgboost = "^2.0.3"
dask = {extras = ["dataframe"], version = "^2024.4.1"}
vaex = "^4.17.0"
pyarrow = "^15.0.2"
jupyterlab-execute-time = "^3.1.2"
memory-profiler = "^0.61.0"
modin = "^0.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
